force-app/main/default/objects/SF_AgenticInvocation__c/SF_AgenticInvocation__c.object-meta.xml
<CustomObject>
    <label>SF Agentic Invocation</label>
    <nameField>
        <displayFormat>AINV-{00000}</displayFormat>
        <label>Invocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Agentic Invocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>