force-app/main/default/objects/SF_AgenticInvocation__c/fields/DispatchType__c.field-meta.xml
<CustomField>
    <fullName>DispatchType__c</fullName>
    <label>Dispatch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>apex</fullName>
            </value>
            <value>
                <fullName>flow</fullName>
            </value>
            <value>
                <fullName>dml</fullName>
            </value>
            <value>
                <fullName>agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>