force-app/main/default/objects/SF_AgenticInvocation__c/fields/HandlerClass__c.field-meta.xml
<CustomField>
    <fullName>HandlerClass__c</fullName>
    <label>Handler Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>