force-app/main/default/objects/SF_AgenticInvocation__c/fields/InputJson__c.field-meta.xml
<CustomField>
    <fullName>InputJson__c</fullName>
    <label>Input Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>