force-app/main/default/objects/SF_AgenticInvocation__c/fields/OutputJson__c.field-meta.xml
<CustomField>
    <fullName>OutputJson__c</fullName>
    <label>Output Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>